--- a/nx.json
+++ b/nx.json
@@ -24,15 +24,30 @@
     }
   },
   "projects": {
-    "store": { "tags": [] },
-    "store-e2e": { "tags": [], "implicitDependencies": ["store"] },
-    "store-ui-shared": { "tags": [] },
-    "store-util-formatters": { "tags": [] },
-    "store-feature-game-detail": { "tags": [] },
-    "api": { "tags": [] },
-    "util-interface": { "tags": [] },
+    "store": {
+      "tags": ["scope:store", "type:app"]
+    },
+    "store-e2e": {
+      "tags": ["scope:store", "type:e2e"],
+      "implicitDependencies": ["store"]
+    },
+    "store-ui-shared": {
+      "tags": ["scope:store", "type:ui"]
+    },
+    "store-util-formatters": {
+      "tags": ["scope:store", "type:util"]
+    },
+    "store-feature-game-detail": {
+      "tags": ["scope:store", "type:feature"]
+    },
+    "api": {
+      "tags": ["scope:api", "type:app"]
+    },
+    "util-interface": {
+      "tags": ["scope:shared", "type:util"]
+    },
     "store-ui-shared-e2e": {
-      "tags": [],
+      "tags": ["scope:store", "type:e2e"],
       "implicitDependencies": ["store-ui-shared"]
     }
   }
