--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@nestjs/testing": "^7.0.0",
     "@nrwl/cli": "12.0.6",
     "@nrwl/cypress": "12.0.6",
+    "@nrwl/devkit": "12.0.6",
     "@nrwl/eslint-plugin-nx": "12.0.6",
     "@nrwl/jest": "12.0.6",
     "@nrwl/linter": "12.0.6",
